<resources>
    <string name="app_name">MP3Player</string>
    <string name="is_online">Отсутствует подключение к интернету!</string>
    <string name="title">Название:</string>
    <string name="artist">Исполнитель:</string>
    <string name="album">Альбом:</string>
    <string name="year">Год:</string>
    <string name="genre">Жанр:</string>
    <string name="composer">Композитор:</string>
    <string name="track">№ Трека:</string>
    <string name="disc">Диск:</string>
    <string name="positive">OK</string>
    <string name="negative">Отмена</string>
    <string name="message">Обновить плейлист?</string>
    <string name="message_ok">Перезапустите приложение...</string>
    <string name="alert_title">Загрузка из облака</string>
    <string name="frequency"> Hz, </string>
    <string name="channels_one">Mono</string>
    <string name="channels_two">Stereo</string>
    <string name="list_music">listMusic</string>
    <string name="repeat_playlist">Повтор плейлиста</string>
    <string name="repeat_track">Повтор трека</string>
    <string name="update">Обновить</string>
    <string name="track_id">trackId</string>
    <string name="track_cycle">track_cycle</string>
    <string name="track_cycle_on">Включен повтор трека</string>
    <string name="track_cycle_off">Повтор трека отключен</string>
    <string name="list_cycle_on">Включен повтор плейлиста</string>
    <string name="list_cycle_off">Повтор плейлиста отключен</string>
</resources>
